Contoh Kasus ChiSquare dan Penyelesaiannya

--- a/Pengujian_Normalitas_Data.ipynb
+++ b/Pengujian_Normalitas_Data.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Uji_Normalitas_Data.ipynb",
+      "name": "Copy of Uji_Normalitas_Data.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
@@ -96,11 +96,7 @@
         "\n",
         "![alt text](https://mutiaoctivianti.files.wordpress.com/2013/11/kn2.jpg)\n",
         "\n",
-        "Kurva normal standar atau kurva normal baku adalah kurva normal yang mana nilai rata-ratanya sama dengan nol ( µ = 0 ) dan simpangan bakunya adalah 1 (σ = 0 ). Dalam kurva normal umum nilai rata-rata sama dengan x dan nilai simpangan baku 1s, 2s, 3s. dengan kata lain dalam kurva normal umum nilai rata-ratanya tidak sama dengan nol (µ ≠ 0) dan nilai simpangan bakunya tidak sama dengan 1 (σ ≠ 1). Kurva normal umum dapat diubah kedalam kurva normal baku dengan menggunakan rumus :\n",
-        "\n",
-        "![alt text](https://mutiaoctivianti.files.wordpress.com/2013/11/kn3.jpg)\n",
-        "\n",
-        "\n",
+        "Kurva normal standar atau kurva normal baku adalah kurva normal yang mana nilai rata-ratanya sama dengan nol ( µ = 0 ) dan simpangan bakunya adalah 1 (σ = 0 ). Dalam kurva normal umum nilai rata-rata sama dengan x dan nilai simpangan baku 1s, 2s, 3s. dengan kata lain dalam kurva normal umum nilai rata-ratanya tidak sama dengan nol (µ ≠ 0) dan nilai simpangan bakunya tidak sama dengan 1 (σ ≠ 1). \n",
         "\n",
         "<br>\n",
         "\n",
@@ -125,7 +121,64 @@
         "\n",
         "**Persyaratan Metode Chi Square (Uji Goodness of fit Distribusi Normal)**\n",
         "*   Data tersusun berkelompok atau dikelompokkan dalam tabel distribus frekuensi.\n",
-        "*   Cocok untuk data dengan banyaknya angka besar ( n > 30 )\n"
+        "*   Cocok untuk data dengan banyaknya angka besar ( n > 30 )\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "**Contoh Kasus**\n",
+        "\n",
+        "Data lebar dari 50 kelopak bunga lily akan diuji normalitasnya dengan Chi Square ($\\chi^2$). Datanya adalah sebagai berikut:\n",
+        "\n",
+        "||||||\n",
+        "|--- |--- |--- |--- |--- |\n",
+        "|5.5|2.4|3.8|5.8|2.1|\n",
+        "|5.5|2.4|3.7|5.0|1.0|\n",
+        "|5.8|2.7|3.9|5.6|2.2|\n",
+        "|6.0|2.7|5.1|5.7|1.6|\n",
+        "|5.4|3.0|4.5|6.3|1.5|\n",
+        "|6.0|3.4|4.5|7.7|4.3|\n",
+        "|6.7|3.1|4.7|7.7|1.3|\n",
+        "|6.3|2.3|4.4|6.0|2.3|\n",
+        "|5.6|3.0|4.1|6.9|3.2|\n",
+        "|5.5|2.5|4.0|3.2|1.2|\n",
+        "\n",
+        "\n",
+        "**Langkah-langkah Penyelesaian**\n",
+        "\n",
+        "\n",
+        "1.   Menentukan jumlah kelas interval. Untuk pengujian normalitas dengan Chi Square, jumlah kelas interval ditetapkan = 6. Hal ini sesuai dengan 6 bidang yang ada pada Kurve Normal Baku.\n",
+        "2.   Menentukan panjang kelas interval.<br><br>\n",
+        "$Panjang Kelas = \\frac{Data Terbesar - Data Terkecil}{Jumlah Kelas Interval}$ <br><br>\n",
+        "$Panjang Kelas=\\frac{7,7 - 1,0}{6}=1,11$ dibulatkan menjadi 1 <br><br>\n",
+        "3.   Menyusun ke dalam tabel distribusi frekuensi, sekaligus tabel penolong untuk menghitung harga Chi Square hitung. Berikut ini adalah tabel nya: \n",
+        "\n",
+        "\n",
+        "|||||||\n",
+        "|----- |----- |----- |----- |----- |----- |\n",
+        "|**Interval**|$f_{o}$|$f_{h}$|$(f_{o}-f_{h})$|$(f_{o}-f_{h})^2$|$\\frac{(f_{o}-f_{h})^2}{f_{h}}$|\n",
+        "|1,0 - 1,2|2|1|1|1|1|\n",
+        "|1,3 - 2,4|9|7|2|4|0,57|\n",
+        "|2,5 - 3,9|12|17|-5|25|1,47|\n",
+        "|4,0 - 5,9|17|17|0|0|0|\n",
+        "|6,0 - 6,9|8|7|1|1|0,14|\n",
+        "|7,0 - 7,7|2|1|1|1|1|\n",
+        "|**Jumlah**|**50**|**50**|**0**||**4,18**|\n",
+        "\n",
+        "<br>\tKeterangan:\t\n",
+        "$f_{o}$ = Frekuensi/jumlah data hasil observasi<br>\n",
+        "$f_{h}$ = Frekuensi/jumlah yang diharapkan (persentase luas tiap bidang dikalikan dengan n)<br>\n",
+        "$(f_{o}-f_{h})$ = Selisih data $f_{o}$ dengan $f_{h}$\n",
+        "4.   Menghitung $f_{h}$, didasarkan pada persentase luas tiap bidang kurva normal dikalikan jumlah data observasi (jumlah individu dalam sampel). Dalam hal ini jumlah individu dalam sampel = 50. <br>\n",
+        "Jadi: <br>\n",
+        "a.  Baris pertama dari atas: 2,7% x 50 = 1,35 dibulatkan menjadi 1<br>\n",
+        "b.  Baris kedua dari atas: 13,53% x 50 = 6,76 dibulatkan menjadi 7<br>\n",
+        "c.  Baris ketiga dari atas: 34,13% x 50 = 17,06 dibulatkan menjadi 17<br>\n",
+        "d.  Baris keempat dari atas: 34,13% x 50 = 51,20 dibulatkan menjadi 17<br>\n",
+        "e.  Baris kelima dari atas: 13,53% x 50 = 20,30 dibulatkan menjadi 7<br>\n",
+        "f.  Baris keenam dari atas: 2,7% x 50 = 4,05 dibulatkan menjadi 1<br>\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ]
