--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -83,13 +83,10 @@
         "\n",
         "**5.\tMenghitung Frekuensi Menggunakan Tally**\n",
         "Setelah Kelas Interval tersusun, selanjutnya memasukkan data satu per satu mulai awal hingga akhir sesuai Kelas Intervalnya, yakni dengan menandai menggunakan Tally (|||| ||). Misalnya apabila bertemu data 4,3, maka pada Kelas Interval ke-1 diberi Tally, jika bertemu data 5,8 maka pada Kelas Interval ke-2 diberi Tally. Begitu seterusnya sampai 30 data. Sehingga diperoleh data seperti tabel di bawah ini. Apabila semua data telah dimasukkan, kolom Tally bisa dihapus.\n",
-        "No Kelas\tKelas Interval\tFrekuensi\n",
-        "1\t0,1-1\t\n",
-        "2\t1,1-2\t\n",
-        "3\t2,1-3\t\n",
-        "4\t3,1-4\t\n",
-        "5\t4,1-5\t\n",
-        "6\t5,1-6\t\n",
+        "| No Kelas | Kelas Interval | Frekuensi (![alt_text](http://render.githubusercontent.com/render/math?math=f&mode=inline))\n",
+        "| --- | --- | --- |\n",
+        "| 1 | 0,1 - 1 | 1 |\n",
+        "| 2 | 1,1 - 2 | 2 |\n",
         "\n",
         "\n",
         "**Grafis**\n",
