Dibuat menggunakan Colaboratory

--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**PENYAJIAN DATA**\n",
+        "## **PENYAJIAN DATA**\n",
         "\n",
         "Penyajian data merupakan salah satu kegiatan dalam pembuatan laporan hasil penelitian yang telah  dilakukan agar dapat dipahami dan dianalisis sesuai dengan tujuan yang digunakan. Data yang disajikan harus sederhana dan jelas agar mudah dibaca.\n",
         "Penyajian data juga dimaksudkaan agar para pengamat dapat dengan mudah memahami apa yang kita sajikan untuk selanjutnya dilakukan penilaian atau perbandingan, dan lain-lain.\n",
@@ -83,7 +83,7 @@
         "\n",
         "**5.\tMenghitung Frekuensi Menggunakan Tally**\n",
         "Setelah Kelas Interval tersusun, selanjutnya memasukkan data satu per satu mulai awal hingga akhir sesuai Kelas Intervalnya, yakni dengan menandai menggunakan Tally (|||| ||). Misalnya apabila bertemu data 4,3, maka pada Kelas Interval ke-1 diberi Tally, jika bertemu data 5,8 maka pada Kelas Interval ke-2 diberi Tally. Begitu seterusnya sampai 30 data. Sehingga diperoleh data seperti tabel di bawah ini. Apabila semua data telah dimasukkan, kolom Tally bisa dihapus.\n",
-        "| No Kelas | Kelas Interval | Frekuensi (![alt_text](http://render.githubusercontent.com/render/math?math=f&mode=inline))\n",
+        "| No Kelas | Kelas Interval | Frekuensi (![alt_text](http://render.githubusercontent.com/render/math?math=f&mode=inline)) |\n",
         "| --- | --- | --- |\n",
         "| 1 | 0,1 - 1 | 1 |\n",
         "| 2 | 1,1 - 2 | 2 |\n",
