Tambahan Penyelesaian Kasus

--- a/Pengujian_Normalitas_Data.ipynb
+++ b/Pengujian_Normalitas_Data.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "**Pengertian Uji Normalitas**\n",
+        "## **Pengertian Uji Normalitas**\n",
         "\n",
         "\n",
         "Uji Normalitas adalah sebuah uji yang dilakukan dengan tujuan untuk menilai sebaran data pada sebuah kelompok data atau variabel, apakah sebaran data tersebut berdistribusi normal ataukah tidak.\n",
@@ -49,7 +49,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "**Distribusi Normal**\n",
+        "## **Distribusi Normal**\n",
         "\n",
         "Disebut pula distribusi Gauss, adalah distribusi probabilitas yang paling banyak digunakan dalam berbagai analisis statistika. Distribusi normal baku adalah distribusi normal yang memilikirata-rata nol dan simpangan baku satu. Distribusi ini juga dijuluki kurva lonceng (bell curve) karena grafikfungsi kepekatan probabilitasnya mirip dengan bentuk lonceng.\n",
         "\n",
@@ -70,7 +70,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "**Kurva Normal**\n",
+        "## **Kurva Normal**\n",
         "\n",
         "Kurva normal adalah satu model distribusi dari sejumlah kemungkinan distribusi. Hal ini disebabkan karena penggunaan konsep kurva normal sangat luas dan dijadikan sebagai alat yang sangat penting dalam pengembangan suatu teori, konsep kurva normal juga memberikan status khusus dalam pengembangan kaidah-kaidah ilmiah.\n",
         "\n",
@@ -92,7 +92,7 @@
         "<br>\n",
         "\n",
         "\n",
-        "**Kurva Normal Baku**\n",
+        "## **Kurva Normal Baku**\n",
         "\n",
         "![alt text](https://mutiaoctivianti.files.wordpress.com/2013/11/kn2.jpg)\n",
         "\n",
@@ -100,7 +100,7 @@
         "\n",
         "<br>\n",
         "\n",
-        "**Uji Normalitas Menggunakan Chi Square ()**\n",
+        "## **Uji Normalitas Menggunakan Chi Square ()**\n",
         "\n",
         "\n",
         "**Pengertian**\n",
@@ -176,6 +176,22 @@
         "d.  Baris keempat dari atas: 34,13% x 50 = 51,20 dibulatkan menjadi 17<br>\n",
         "e.  Baris kelima dari atas: 13,53% x 50 = 20,30 dibulatkan menjadi 7<br>\n",
         "f.  Baris keenam dari atas: 2,7% x 50 = 4,05 dibulatkan menjadi 1<br>\n",
+        "\n",
+        "5.   Memasukkan harga-harga $f_{h}$ ke dalamtabel kolom $f_{h}$, sekaligus menghitung harga-harga $(f_{o}-f_{h})^2$ dan $\\frac{(f_{o}-f_{h})^2}{f_{h}}$. Harga $\\frac{(f_{o}-f_{h})^2}{f_{h}}$\tmerupakan harga Chi Square ($\\chi^2$) Hitung.\n",
+        "6.   Membandingkan harga $\\chi^2$ Hitung dan $\\chi^2$ Tabel. Bila harga $\\chi^2$ Hitung **lebih kecil **dari pada $\\chi^2$ Tabel, maka distribusi data dinyatakan **normal**, dan bila **lebih besar **dinyatakan **tidak normal**.\n",
+        "<br><br>\n",
+        "**Tabel $\\chi^2$**<br>\n",
+        "![alt text](https://i2.wp.com/www.statistikian.com/wp-content/uploads/blogger/-pAeglRRna6c/U1LLQQIMAuI/AAAAAAAACwQ/KiocqpWquTI/s1600/Chi-Square%2BTabel.JPG)\n",
+        "\n",
+        "> Membandingkan harga chi kuadrat hitung dengan harga chi kuadrat tabel. Bila harga chi kuadrat hitung lebih kecil dari harga chi kudrat tabel maka distribusi data dikatakan normal. \n",
+        "<br>\n",
+        "Dari perhitungan diperoleh harga chi kuadrat sebesar 4,18 selanjutnya harga ini dibandingkan dengan harga chi kuadrat tabel dengan dk = (6-1) = 5 dan taraf signifikan (α ) = 5% maka harga chi kuadrat tabel = 11,07. <br>\n",
+        "Karena harga chi kuadrat hitung lebih kecil dari chi kuadrat tabel (4,18 < 11,07) maka distribusi data akhir di kelas eksperimen dikatakan **berdistribusi normal.**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n"
