Dibuat menggunakan Colaboratory

--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -52,6 +52,8 @@
         "**Distribusi Frekuensi**\n",
         "\n",
         "Untuk membentuk distribusi frekuensi akan dijelaskan dengan contoh berikut. Terdapat 30 data panjang kelopak daun dalam cm,\n",
+        "| Kolom1 | Kolom 2 | Kolom 3 |\n",
+        "(![alt_text](http://render.githubusercontent.com/render/math?math=f&mode=inline)) |\n",
         "5,1\t4,9\t4,7\n",
         "4.6\t5,0\t5,4\n",
         "4,6\t5,0\t4,4\n",
