Dibuat menggunakan Colaboratory

--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -99,7 +99,8 @@
         "Selain tabel, data disajikan dalam bentuk grafis. Dalam penyajian grafis ini, data disajikan dalam bentuk gambar. Terdapat dua macam penyajian grafis, yakni dalam bentuk grafik dan diagram.\n",
         "\n",
         "\n",
-        "# **1.\tGrafik**\n",
+        " **1.\tGrafik**\n",
+        " \n",
         "Grafik digunakan untuk meyajikan data yang menunjukkan hubungan 2 variabel. Misalnya hubungan variabel jumlah dan variabel waktu.\n",
         "\n",
         "**Grafik garis**\n",
@@ -108,7 +109,8 @@
         " \n",
         "\n",
         "\n",
-        "# **2.\tDiagram**\n",
+        " **2.\tDiagram**\n",
+        " \n",
         "Diagram digunakan untuk menunjukkan perbandingan data dari berbagai kelompok, biasanya disajikan dalam bentuk perbandingan persentase.\n",
         "\n",
         "**Diagram Batang**\n",
