Dibuat menggunakan Colaboratory

--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -53,11 +53,22 @@
         "\n",
         "Tabulasi adalah proses menempatkan data dallam bentuk tabel dengan cara membuat tabel yang berisikan data sesuai dengan kebutuhan analisis. Tabel yang dibuat mampu meringkas semua data yang akan dianalisis. Sebelum membahas tentang penyajiannya, maka yang perlu dibahas adalah bagaimana cara untuk mengorganisasi data. Salah satu teknik yang digunakan untuk mengorganisasi data adalah distribusi frekuensi (frequency distribution).\n",
         "\n",
-        "### **Distribusi Frekuensi**\n",
+        " **Distribusi Frekuensi**\n",
         "\n",
         "Untuk membentuk distribusi frekuensi akan dijelaskan dengan contoh berikut. Terdapat 30 data panjang kelopak daun dalam cm.\n",
         "\n",
-        "\n",
+        "|  Kolom 1 | Kolom 2  | Kolom 3   |   |   |\n",
+        "|---|---|---|---|---|\n",
+        "| 5,1 | 4,9  | 4,7 |\n",
+        "| 4,6 | 5,0  | 5,4 |\n",
+        "| 4,6 | 5,0 | 4,4 |\n",
+        "| 4,9 | 5,4 | 4,8 |\n",
+        "| 4,9 | 4,3 | 5,8|\n",
+        "| 5,7 | 5,4 | 5,1 |\n",
+        "| 5,7 | 5,1 | 5,4 |\n",
+        "| 5,1 | 4,6 | 5,1 |\n",
+        "|4,8 | 5,0 | 5,0 |\n",
+        "| 5,2 | 5,2 | 4,7 |\n",
         "\n",
         "Berikut ini adalah langkah-langkah dalam membentuk distribusi frekuensi: \n",
         "\n",
