--- a/Penyajian_Data.ipynb
+++ b/Penyajian_Data.ipynb
@@ -57,8 +57,8 @@
         "\n",
         "Untuk membentuk distribusi frekuensi akan dijelaskan dengan contoh berikut. Terdapat 30 data panjang kelopak daun dalam cm.\n",
         "\n",
-        "|  Kolom 1 | Kolom 2  | Kolom 3   |   |   |\n",
-        "|---|---|---|---|---|\n",
+        "|  Kolom 1 | Kolom 2  | Kolom 3   | \n",
+        "|---|---|---|\n",
         "| 5,1 | 4,9  | 4,7 |\n",
         "| 4,6 | 5,0  | 5,4 |\n",
         "| 4,6 | 5,0 | 4,4 |\n",
@@ -96,13 +96,14 @@
         "**5.\tMenghitung Frekuensi Menggunakan Tally**\n",
         "\n",
         "Setelah Kelas Interval tersusun, selanjutnya memasukkan data satu per satu mulai awal hingga akhir sesuai Kelas Intervalnya, yakni dengan menandai menggunakan Tally (|||| ||). Misalnya apabila bertemu data 4,3, maka pada Kelas Interval ke-1 diberi Tally, jika bertemu data 5,8 maka pada Kelas Interval ke-2 diberi Tally. Begitu seterusnya sampai 30 data. Sehingga diperoleh data seperti tabel di bawah ini. Apabila semua data telah dimasukkan, kolom Tally bisa dihapus.\n",
-        "No Kelas\tKelas Interval\tFrekuensi\n",
-        "1\t0,1-1\t\n",
-        "2\t1,1-2\t\n",
-        "3\t2,1-3\t\n",
-        "4\t3,1-4\t\n",
-        "5\t4,1-5\t\n",
-        "6\t5,1-6\t\n",
+        "\n",
+        "|  No Kelas | Interval | Frekuensi | \n",
+        "|---|---|---|\n",
+        "| 1 | 4 - 4,5  | 2 |\n",
+        "| 2 | 4,6 - 5  | 12 |\n",
+        "| 3 | 5,1 - 5,5 | 11 |\n",
+        "| 4 | 5,6 - 6 | 3 |\n",
+        "\n",
         "\n",
         "\n",
         "\n",
