Dibuat menggunakan Colaboratory

--- a/Konsep_Dasar_Uji_Hipotesis.ipynb
+++ b/Konsep_Dasar_Uji_Hipotesis.ipynb
@@ -58,7 +58,7 @@
         "\n",
         "## **Tiga Bentuk Rumusan Hipotesis**\n",
         "\n",
-        "**1. Hipotesis Deskriptif**\n",
+        "### **1. Hipotesis Deskriptif**\n",
         "\n",
         "Hipotesis deskriptif yaitu dugaan terhadap nilai satu variabel dalam satu sampel meskipun di dalamnya bisa ada beberapa kategori.\n",
         "\n",
@@ -74,11 +74,13 @@
         "Berikut ini adalah contoh pernyataan yang dapat dirumuskan hipotesis deskriptif-statistiknya:\n",
         "\n",
         "•\tSuatu perusahaan minuman harus mengikuti ketentuan, bahwa salah satu unsur kimia hanya boleh dicampurkan paling banyak 1%. (paling banyak berarti lebih kecil atau sama dengan $\\leq$). Dengan demikian rumusan hipotesis statistiknya adalah:\n",
+        "\n",
         "Ho : panjang kelopak daun kurang dari 4cm\n",
+        "\n",
         "Ha : panjang kelopak daun lebih dari 4cm\n",
         ".\n",
         "\n",
-        "**2. Hipotesis Komparatif**\n",
+        "### **2. Hipotesis Komparatif**\n",
         "\n",
         "Hipotesis Komparatif adalah dugaan terhadap perbandingan nilai dua sampel atau lebih. Hipotesis komparatif merupakan salah satu dari macam macam hipotesis. \n",
         "\n",
@@ -93,7 +95,7 @@
         "Ha: Tidak ada perbedaan\n",
         "\n",
         "\n",
-        "**3. Hipotesis Hubungan (Asosiasif)**\n",
+        "### **3. Hipotesis Hubungan (Asosiasif)**\n",
         "\n",
         "Hipotesis Asosiatif adalah dugaan terhadap hubungan antara dua variabel atau lebih. Hipotesis asosiatif merupakan salah satu dari macam macam hipotesis.\n",
         "\n",
