Dibuat menggunakan Colaboratory

--- a/Ukuran_Persebaran_Data.ipynb
+++ b/Ukuran_Persebaran_Data.ipynb
@@ -26,32 +26,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xdmL0OnPpQgH",
-        "colab_type": "code",
-        "outputId": "ed2d1bad-3ee2-485e-8668-b6c36360a3e8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-7b38aed67521>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Ukuran Persebaran Data\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ZK4O9Bt6zdho",
@@ -73,31 +47,26 @@
         "\n",
         "Dengan kelompok data ini, kemudian diambil sample beberapa data dari lebar kelopak bunga, dan disusun sedemikian rupa hingga membentuk data set baru seperti dibawah :\n",
         "\n",
+        "*   Dalam bentuk data tunggal\n",
         "\n",
-        "### Dalam bentuk data tunggal\n",
-        "4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
-        "\n",
-        "###Dalam bentuk data kelompok (tabel frekuensi):\n",
-        "        \"\\n\",\n",
-        "        \"|||||\\n\",\n",
-        "        \"|--- |--- |--- |--- |\\n\",\n",
-        "        \"|**Interval Jumlah**|**Frekuensi ( $f$ )**|\\n\",\n",
-        "        \"| ***4.5 – 5*** | ***4*** |\\n\",\n",
-        "        \"| 5 – 5.5\\t| 3 |\\n\",\n",
-        "        \"| 5.5 – 6\\t| 2 |\\n\",\n",
-        "        \"| 6 - 6.5 | 2 |\\n\",\n",
-        "        \"| 6.5 - 7 | 1 |\\n\",\n",
-        "        \"| 7 - 7.5 | 2 |\\n\",\n",
-        "        \"| 7.5 - 8 | 1 |\\n\",\n",
-        "        \"| Jumlah data | $\\\\sum{f} = $ \\t15 | | - |\\n\",\n",
-        "        \"||||\\n\",\n",
-        "        \"\\n\",\n",
+        "      4.6, 4.7, 4.7, 4.9, 5.0, 5.1, 5.4, 5.6, 5.8, 6.3, 6.3, 6.5, 7.1, 7.3, 7.6\n",
+        "      \n",
+        "      \n",
+        "*   Dalam bentuk data kelompok (tabel frekuensi):\n",
         "\n",
         "\n",
-        "Beriku pembahasan materi ukuran persebaran data :\n",
-        "1.   Jangkauan (range)\n",
+        "\n",
+        "Berikut pembahasan materi ukuran persebaran data :\n",
+        "\n",
+        "## 1.   Jangkauan (range)\n",
         "       \n",
         "       Jangkauan sering disebut range atau rentang. Jangkauan dari suatu data didefinisikan sebagai selisih antara data terbesar dan terkecil. Jangkauan disimbolkan dengan Huruf. Rumus umum jangkauan yaitu \n",
+        "    \n",
+        "    ![teks alternatif](https://i.ibb.co/wKVky6F/Screenshot-37.png)\n",
+        "    \n",
+        "    \n",
+        "    <a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/wKVky6F/Screenshot-37.png\" alt=\"Screenshot-37\" border=\"0\"></a>\n",
+        "    \n",
         "    \n",
         "    R = xmax - xmin\n",
         "    Keterangan : \n",
@@ -106,7 +75,7 @@
         "    xmin = nilai atau data terkecil\n",
         "       \n",
         "       \n",
-        "2.   Simpangan baku (Standar Deviasi)\n",
+        "## 2.   Simpangan baku (Standar Deviasi)\n",
         "\n",
         "      Simpangan Baku data tunggal\n",
         "    Diketahui sekumpulan data kuantittif yang tidak dikelompokkan dan dinyatakan oleh x1, x2,......,xn. Dari data tersebut dapat diperoleh nilai simpangan baku (S) yang ditentukan oleh rumus berikut\n",
