Dibuat menggunakan Colaboratory

--- a/Ukuran_Persebaran_Data.ipynb
+++ b/Ukuran_Persebaran_Data.ipynb
@@ -56,41 +56,45 @@
         "\n",
         "\n",
         "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
         "Berikut pembahasan materi ukuran persebaran data :\n",
         "\n",
         "## 1.   Jangkauan (range)\n",
         "       \n",
-        "       Jangkauan sering disebut range atau rentang. Jangkauan dari suatu data didefinisikan sebagai selisih antara data terbesar dan terkecil. Jangkauan disimbolkan dengan Huruf. Rumus umum jangkauan yaitu \n",
+        "Jangkauan sering disebut range atau rentang. Jangkauan dari suatu data didefinisikan sebagai selisih antara data terbesar dan terkecil. Jangkauan disimbolkan dengan Huruf. Rumus umum jangkauan yaitu \n",
         "    \n",
-        "    ![teks alternatif](https://i.ibb.co/wKVky6F/Screenshot-37.png)\n",
-        "    \n",
-        "    \n",
-        "    <a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/wKVky6F/Screenshot-37.png\" alt=\"Screenshot-37\" border=\"0\"></a>\n",
-        "    \n",
-        "    \n",
-        "    R = xmax - xmin\n",
-        "    Keterangan : \n",
-        "    R = Jangkauan atau Range\n",
-        "    xmax = nilai atau data terbesar\n",
-        "    xmin = nilai atau data terkecil\n",
+        "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/wKVky6F/Screenshot-37.png\" alt=\"Screenshot-37\" border=\"0\"></a>\n",
+        "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/Jnbht3t/Screenshot-38.png\" alt=\"Screenshot-38\" border=\"0\"></a>\n",
         "       \n",
         "       \n",
         "## 2.   Simpangan baku (Standar Deviasi)\n",
         "\n",
-        "      Simpangan Baku data tunggal\n",
-        "    Diketahui sekumpulan data kuantittif yang tidak dikelompokkan dan dinyatakan oleh x1, x2,......,xn. Dari data tersebut dapat diperoleh nilai simpangan baku (S) yang ditentukan oleh rumus berikut\n",
-        "    <gambar rumus>\n",
-        "    Data Sampel berlaku untuk n<30 dan data populasi untuk n>= 30\n",
+        "**Simpangan Baku data tunggal**\n",
+        "\n",
+        "Diketahui sekumpulan data kuantittif yang tidak dikelompokkan dan dinyatakan oleh x1, x2,......,xn. Dari data tersebut dapat diperoleh nilai simpangan baku (S) yang ditentukan oleh rumus berikut\n",
+        "\n",
+        "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/XDKK4h3/Screenshot-39.png\" alt=\"Screenshot-39\" border=\"0\"></a>\n",
+        "\n",
+        "Data Sampel berlaku untuk n<30 dan data populasi untuk n>= 30\n",
         "  \n",
-        "  Simpangan Baku data Berkelompok\n",
-        "    Sekumpulan data kuantittif yang dikelompokkan dan dinyatakan oleh x1, x2,......,xn dan masing-masing data mempunyai frekuensi f1, f2, ......., fn. Simpangan baku (S) dari data tersebut dieroleh dengan menggunakan rumus\n",
+        "  \n",
+        "**Simpangan Baku data Berkelompok**\n",
+        "\n",
+        "Sekumpulan data kuantittif yang dikelompokkan dan dinyatakan oleh x1, x2,......,xn dan masing-masing data mempunyai frekuensi f1, f2, ......., fn. Simpangan baku (S) dari data tersebut dieroleh dengan menggunakan rumus\n",
+        "\n",
+        "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/mGSfXbM/Screenshot-40.png\" alt=\"Screenshot-40\" border=\"0\"></a>\n",
         "      \n",
         "      \n",
-        "3.   Variasi\n",
+        "## 3.   Variasi\n",
         "  \n",
-        "      Variansi (ragam) adalah rata-rata dari jumlah kuadrat simpangan tiap data. Ragam bisa dirumuskan sebagai\n",
-        "    Ragam = S^2\n",
-        "    Artinya ragam diperoleh dari nilai simpangan bakudikuadratkan.\n"
+        "Variansi (ragam) adalah rata-rata dari jumlah kuadrat simpangan tiap data. Ragam bisa dirumuskan sebagai\n",
+        "\n",
+        "Variasi = S^2\n",
+        "\n",
+        "Artinya ragam diperoleh dari nilai simpangan bakudikuadratkan.\n"
       ]
     }
   ]
