Dibuat menggunakan Colaboratory

--- a/Ukuran_Persebaran_Data.ipynb
+++ b/Ukuran_Persebaran_Data.ipynb
@@ -54,6 +54,7 @@
         "      \n",
         "*   Dalam bentuk data kelompok (tabel frekuensi):\n",
         "\n",
+        "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/V2PFP5G/Screenshot-41.png\" alt=\"Screenshot-41\" border=\"0\"></a>\n",
         "\n",
         "\n",
         "---\n",
@@ -92,7 +93,7 @@
         "  \n",
         "Variansi (ragam) adalah rata-rata dari jumlah kuadrat simpangan tiap data. Ragam bisa dirumuskan sebagai\n",
         "\n",
-        "Variasi = S^2\n",
+        "Ragam = S^2\n",
         "\n",
         "Artinya ragam diperoleh dari nilai simpangan bakudikuadratkan.\n"
       ]
