Dibuat menggunakan Colaboratory

--- a/Konsep_Dasar_Uji_Hipotesis.ipynb
+++ b/Konsep_Dasar_Uji_Hipotesis.ipynb
@@ -103,7 +103,25 @@
         "\n",
         "Ho : Tidak ada hubungan anatara panjang kelopak daun dengan bunga\n",
         "\n",
-        "Ha : Terdapat hubungan anatara panjang kelopan daun dengan bunga"
+        "Ha : Terdapat hubungan anatara panjang kelopan daun dengan bunga.\n",
+        "\n",
+        "## **Langkah-langkah Uji Hipotesis**\n",
+        "\n",
+        "**Langkah 1: Membuat Hipotesis Nol dan Hipotesis Alternatif**\n",
+        "\n",
+        "Hipotesis nol (the null hypothesis) H0 adalah hipotesis yang akan diuji kebenarannya. Hipotesis alternatif (alternate hypothesis) Ha adalah suatu pernyataan yang akan kita simpulkan jika kita menolak hipotesis nol. Hipotesis alternatif disebut hipotesis penelitian (research hypothesis). Misalnya rata-rata harga tiket pesawat terbang Yogyakarta – Jakarta 480.000 H0 : = 480.000 Ha : 480.000 \n",
+        "\n",
+        "**Langkah 2: Memilih Derajat Keyakinan**\n",
+        "\n",
+        "(alpha) adalah probabilitas menolak hipotesis nol jika itu benar. Atau disebut tingkat resiko (the level of risk). Biasanya =1%, = 5% dan =10%. \n",
+        "\n",
+        "**Langkah 3: Memilih Uji Statistik **\n",
+        "\n",
+        "Ada beberapa uji statistik yang bisa digunakan untuk membuktikan hipotesis nol yaitu uji Z, t, F dan chi squares.\n",
+        "\n",
+        "**Langkah 4: Tolak atau Terima H0** \n",
+        "\n",
+        "Selanjutnya nilai perhitungan sesuai rumus, dibandingkan dengan nilai tabel. Disesuaikan dengan ketentuan yang berlaku, untuk menolak atau menerima H0"
       ]
     }
   ]
