Dibuat menggunakan Colaboratory

--- a/Ukuran_Persebaran_Data.ipynb
+++ b/Ukuran_Persebaran_Data.ipynb
@@ -70,6 +70,16 @@
         "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/wKVky6F/Screenshot-37.png\" alt=\"Screenshot-37\" border=\"0\"></a>\n",
         "<a href=\"https://imgbb.com/\"><img src=\"https://i.ibb.co/Jnbht3t/Screenshot-38.png\" alt=\"Screenshot-38\" border=\"0\"></a>\n",
         "       \n",
+        "Contoh :\n",
+        "*   Pada data tunggal\n",
+        "    \n",
+        "      <a href=\"https://ibb.co/FD4vLmq\"><img src=\"https://i.ibb.co/wzhHFBr/Screenshot-44.png\" alt=\"Screenshot-44\" border=\"0\"></a>\n",
+        "\n",
+        "\n",
+        "*   Pada data kelompok\n",
+        "\n",
+        "     <a href=\"https://ibb.co/tXZswwj\"><img src=\"https://i.ibb.co/Ryh0GGr/Screenshot-45.png\" alt=\"Screenshot-45\" border=\"0\"></a>\n",
+        "     \n",
         "       \n",
         "## 2.   Simpangan baku (Standar Deviasi)\n",
         "\n",
@@ -95,7 +105,7 @@
         "\n",
         "Ragam = S^2\n",
         "\n",
-        "Artinya ragam diperoleh dari nilai simpangan bakudikuadratkan.\n"
+        "Artinya ragam diperoleh dari nilai simpangan baku dikuadratkan\n"
       ]
     }
   ]
